@@ -1,3 +1,5 @@
 Version 0.1:
   - initial release
   - based on SVDLIBC version 1.4
+  - modified to avoid I/O on STDOUT and STDERR
+
